<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/config_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:id="@id/preview_window" android:background="@drawable/flower" android:layout_width="fill_parent" android:layout_height="146.0dip">
        <LinearLayout android:orientation="vertical" android:id="@id/widget_preview_layout" android:background="@drawable/shape_square" android:layout_width="72.0dip" android:layout_height="72.0dip">
            <LinearLayout android:id="@id/sourceLayout" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:id="@id/menu_button" android:visibility="invisible" android:layout_width="15.0dip" android:layout_height="15.0dip" android:src="@android:drawable/ic_menu_more" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="9.0dip" android:gravity="center" android:layout_gravity="center" android:id="@id/bank_preview" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="CBR" android:layout_weight="1.0" />
                <ImageView android:layout_gravity="right" android:id="@id/update_button" android:layout_width="15.0dip" android:layout_height="15.0dip" android:src="@android:drawable/stat_notify_sync" />
            </LinearLayout>
            <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:id="@id/rate_preview" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="0.78" />
            </LinearLayout>
            <LinearLayout android:layout_gravity="center" android:id="@id/curLayout" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="10.0dip" android:gravity="center" android:id="@id/cur_preview" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="USD/EUR" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <ScrollView android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <Spinner android:entries="@array/listArray" android:id="@id/spinFrom" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_weight="1.0" />
            <Spinner android:entries="@array/listArray" android:id="@id/spinTo" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_weight="1.0" />
            <Spinner android:entries="@array/listsourceConfig" android:id="@id/spinBank" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_weight="1.0" />
            <Spinner android:entries="@array/listwidgettheme" android:id="@id/spinTheme" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_weight="1.0" />
            <CheckBox android:id="@id/checkRounded" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/rounded_corner_not" android:layout_weight="1.0" />
            <CheckBox android:id="@id/checkCircle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/circle_or_not" android:layout_weight="1.0" />
            <CheckBox android:id="@id/checkUpdateShow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_update" android:layout_weight="1.0" />
            <CheckBox android:id="@id/checkBank" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_bank" android:layout_weight="1.0" />
            <CheckBox android:id="@id/checkCur" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_cur" android:layout_weight="1.0" />
            <CheckBox android:id="@id/checkOnlyFrom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_onlyFrom" android:layout_weight="1.0" />
            <CheckBox android:id="@id/checkOnlyTo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_onlyTo" android:layout_weight="1.0" />
        </LinearLayout>
    </ScrollView>
    <Button android:id="@id/okconfig" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="OK" />
</LinearLayout>